# Glenn_Bfx_Repo

./: README.md  analyze_interpreted_variants.md  pyproject.toml
giab_variant_interpretation/interpret/: interpret_giab_variants.py  test_giab_variant_interpretation_pipeline.py
giab_variant_interpretation/notebooks/.ipynb_checkpoints/: interpret_genomeinabottle_variants-checkpoint.ipynb
giab_variant_interpretation/utils/: utils.py
variant_interpretation/notebooks/: analyze_interpreted_variants.ipynb
variant_interpretation/notebooks/.ipynb_checkpoints/: interpret_genomeinabottle_variants-checkpoint.ipynb
variant_interpretation/utils/: utils.py
variant_interpretation/variants/: download.py  interpret_variants.py
