[tool.poetry]
name = "glenn-bfx-repo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.18"
pandas = "^2.2.0"
pysam = "^0.22.0"
progressbar = "^2.5"
jupyterlab = "^4.0.12"
wget = "^3.2"
matplotlib = "^3.8.2"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
